--- a/styles/main.css
+++ b/styles/main.css
@@ -1,1 +1,49 @@
+html {
+	background-color: rgb(189, 189, 189);
+	overflow-x: hidden;
+}
 
+#TitleBar {
+	background-color: rgb(74, 70, 70);
+	position: relative;
+    width: 1920px;
+    height: 50px;
+	overflow: hidden;
+}
+
+
+#title {
+	position: relative;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 25px;
+	top: 25px;
+	left: 25px;
+}
+
+#ButtonTitle {
+    position: relative;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+}
+
+#Buttons {
+	position: relative;
+	top: 5px;
+	left: 20px
+}
+
+.checkboxtext {
+    position: relative;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+	padding-left: 8px;
+	padding-right: 8px;
+}
+
+.text {
+	color: white;
+}
+
+.inlineblock {
+    display: inline-block;
+}
